<resources>
    <string name="app_name">TriviaApp</string>
    <string name="title">Trivia</string>
    <string name="true_title">True</string>
    <string name="false_button">False</string>
    <string name="previous_button">previous_button</string>
    <string name="next_button">next_button</string>
    <string name="counter_questions">0 out of 100</string>
    <string name="correct_answer">Correct</string>
    <string name="wrong_answer">Wrong</string>
</resources>